Fixed minor issues in the TODO demo

--- a/work/demos/todo.html
+++ b/work/demos/todo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset='utf-8'>
   <title>Umbrella Demos - Todo</title>
-  <link rel='shortcut icon' href='resources/images/favicon.png'>
-  <link rel='stylesheet' type='text/css' href='resources/reset.css'>
-  <link rel='stylesheet' type='text/css' href='resources/style.css'>
+  <link rel='shortcut icon' href='assets/images/favicon.png'>
+  <link rel='stylesheet' type='text/css' href='assets/reset.css'>
+  <link rel='stylesheet' type='text/css' href='assets/style.css'>
   <script src='../primitives.js'></script>
   <script src='./deps.js'></script>
   <script>include('demos/todo/main.js');</script>
