Changes in the architecture of the demos

--- a/Work/Demos/Hello.html
+++ b/Work/Demos/Hello.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset='utf-8'>
   <title>Umbrella Demos - Hello</title>
-  <link rel='shortcut icon' href='resources/images/favicon.png'>
+  <link rel='shortcut icon' href='Global/Images/FavIcon.png'>
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,700">  
-  <script src='../primitives.js'></script>
-  <script src='./deps.js'></script>
-  <script>include('demos/hello/main.js');</script>
+  <script src='/Primitives.js'></script>
+  <script src='Global/Deps.js'></script>
+  <script>include('Demos/Hello/Main.js');</script>
 </head>
 <body></body>
 </html>
