--- a/Work/Demos/Index.html
+++ b/Work/Demos/Index.html
@@ -13,8 +13,8 @@
   below:</p>
 
   <ul>
-    <li><a href='hello.html#test/param'>Hello Demo</a></li>
-    <li><a href='todo.html'>Todo List Demo</a></li>
+    <li><a href='Hello.html'>Hello Demo</a></li>
+    <li><a href='ToDo.html'>Todo List Demo</a></li>
   </ul>
 </body>
 </html>
