--- a/Work/Demos/ToDo.html
+++ b/Work/Demos/ToDo.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>Umbrella Demos - Todo</title>
-  <link rel='shortcut icon' href='assets/images/favicon.png'>
-  <link rel='stylesheet' type='text/css' href='assets/reset.css'>
-  <link rel='stylesheet' type='text/css' href='assets/style.css'>
-  <script src='../primitives.js'></script>
-  <script src='./deps.js'></script>
-  <script>include('demos/todo/main.js');</script>
+  <title>Umbrella Demos - ToDo</title>
+  <link rel='shortcut icon' href='Global/Images/FavIcon.png'>
+  <link rel='stylesheet' type='text/css' href='Global/Reset.css'>
+  <link rel='stylesheet' type='text/css' href='Global/Style.css'>
+  <script src='/Primitives.js'></script>
+  <script src='Global/Deps.js'></script>
+  <script>include('Demos/ToDo/Main.js');</script>
 </head>
 <body></body>
 </html>
